CAY-2737 Cayenne 4.3: cleanup deprecated code  - fix test